--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -52,7 +52,7 @@
     "connection_status_connected": "Status: Connected",
     "connection_status_error": "Status: Error",
     "connection_status_not_configured": "Status: Not configured",
-    "balance_label": "OpenRouter:",
+    "balance_label": "Balance:",
     "balance_loading": "Balance: Loading...",
     "balance": "Balance",
     "balance_error": "Balance: Error",
@@ -70,6 +70,9 @@
     "dataimpulse_settings_label": "DataImpulse Settings",
     "language_settings_label": "Language Settings",
     "prompts_settings_label": "Prompts Settings",
+    "preview_settings_group": "Preview Settings",
+    "preview_prompt_label": "💾 Preview Prompt:",
+    "preview_image_count_label": "💾 Image Count:",
     "montage_settings_label": "Montage Settings",
     "subtitles_settings_label": "Subtitles Settings",
     "templates_settings_label": "Templates Settings",
@@ -83,6 +86,7 @@
     "stage_transcription": "Transcription",
     "stage_rewrite": "Rewrite",
     "stage_translation": "Translation",
+    "stage_preview": "Preview",
     "stage_img_prompts": "Image Prompts",
     "stage_images": "Images",
     "stage_generated_images": "Generated images",
