--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -52,7 +52,7 @@
     "connection_status_connected": "Статус: Подключено",
     "connection_status_error": "Статус: Ошибка",
     "connection_status_not_configured": "Статус: Не настроено",
-    "balance_label": "OpenRouter:",
+    "balance_label": "Баланс:",
     "balance_loading": "Баланс: Загрузка...",
     "balance": "Баланс",
     "balance_error": "Баланс: Ошибка",
@@ -70,6 +70,9 @@
     "dataimpulse_settings_label": "Настройки DataImpulse",
     "language_settings_label": "Настройки языков",
     "prompts_settings_label": "Настройки промтов",
+    "preview_settings_group": "Настройки Превью",
+    "preview_prompt_label": "💾 Промпт для превью:",
+    "preview_image_count_label": "💾 Количество изображений:",
     "montage_settings_label": "Настройки монтажа",
     "subtitles_settings_label": "Настройки субтитров",
     "templates_settings_label": "Настройки шаблонов",
@@ -82,6 +85,7 @@
     "rewrite_model_label": "💾 Модель для рерайта:",
     "stage_download": "Загрузка",
     "stage_transcription": "Транскрибация",
+    "stage_preview": "Превью",
     "stage_rewrite": "Рерайт",
     "stage_translation": "Перевод",
     "stage_img_prompts": "Промты для картинок",
