--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -52,7 +52,7 @@
     "connection_status_connected": "Статус: Підключено",
     "connection_status_error": "Статус: Помилка",
     "connection_status_not_configured": "Статус: Не налаштовано",
-    "balance_label": "OpenRouter: ",
+    "balance_label": "Баланс: ",
     "balance_loading": "Баланс: Завантаження...",
     "balance": "Баланс",
     "balance_error": "Баланс: Помилка",
@@ -70,6 +70,9 @@
     "dataimpulse_settings_label": "Налаштування DataImpulse",
     "language_settings_label": "Налаштування мов",
     "prompts_settings_label": "Налаштування промтів",
+    "preview_settings_group": "Налаштування Прев'ю",
+    "preview_prompt_label": "💾 Промпт для прев'ю:",
+    "preview_image_count_label": "💾 Кількість зображень:",
     "montage_settings_label": "Налаштування монтажу",
     "subtitles_settings_label": "Налаштування субтитрів",
     "templates_settings_label": "Налаштування шаблонів",
@@ -84,6 +87,7 @@
     "stage_transcription": "Транскрибація",
     "stage_rewrite": "Рерайт",
     "stage_translation": "Переклад",
+    "stage_preview": "Прев'ю",
     "stage_img_prompts": "Промти",
     "stage_images": "Картинки",
     "stage_generated_images": "Згенеровані картинки",
