--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -191,6 +191,43 @@
     "bitrate_label": "💾 Bitrate:",
     "upscale_factor_label": "💾 Upscale Factor:",
     "transitions_settings": "Transitions",
+    "transition_effect_label": "💾 Transition Effect:",
+    "transition_random": "Random",
+    "trans_desc_random": "Randomly selects a different transition for each clip.",
+    "trans_desc_fade": "Smooth cross-fade between clips.",
+    "trans_desc_wipeleft": "Linear wipe from right to left.",
+    "trans_desc_wiperight": "Linear wipe from left to right.",
+    "trans_desc_wipeup": "Linear wipe from bottom to top.",
+    "trans_desc_wipedown": "Linear wipe from top to bottom.",
+    "trans_desc_slideleft": "New clip slides in from the right.",
+    "trans_desc_slideright": "New clip slides in from the left.",
+    "trans_desc_slideup": "New clip slides in from the bottom.",
+    "trans_desc_slidedown": "New clip slides in from the top.",
+    "trans_desc_circlecrop": "Circular crop expands to reveal new clip.",
+    "trans_desc_rectcrop": "Rectangular crop expands to reveal new clip.",
+    "trans_desc_distance": "Old clip zooms out, new clip zooms in.",
+    "trans_desc_fadeblack": "Fades into black, then into new clip.",
+    "trans_desc_fadewhite": "Fades into white, then into new clip.",
+    "trans_desc_radial": "Clock-wise wipe effect.",
+    "trans_desc_smoothleft": "Smooth sliding wipe to the left.",
+    "trans_desc_smoothright": "Smooth sliding wipe to the right.",
+    "trans_desc_smoothup": "Smooth sliding wipe upwards.",
+    "trans_desc_smoothdown": "Smooth sliding wipe downwards.",
+    "trans_desc_circleopen": "Circle opens from center.",
+    "trans_desc_circleclose": "Circle closes to center.",
+    "trans_desc_vertopen": "Opens vertically from center.",
+    "trans_desc_vertclose": "Closes vertically to center.",
+    "trans_desc_horzopen": "Opens horizontally from center.",
+    "trans_desc_horzclose": "Closes horizontally to center.",
+    "trans_desc_dissolve": "Dissolves one clip into another.",
+    "trans_desc_pixelize": "Pixelates old clip into new one.",
+    "trans_desc_diagtl": "Diagonal wipe from top-left.",
+    "trans_desc_diagtr": "Diagonal wipe from top-right.",
+    "trans_desc_diagbl": "Diagonal wipe from bottom-left.",
+    "trans_desc_diagbr": "Diagonal wipe from bottom-right.",
+    "trans_desc_hlslice": "Horizontal slices to the left.",
+    "trans_desc_hrslice": "Horizontal slices to the right.",
+    "trans_desc_vu": "Vertical wipe upwards.",
     "enable_transitions_label": "💾 Enable Transitions",
     "duration_label": "💾 Duration:",
     "zoom_effects": "Zoom Effects",
