--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -193,6 +193,43 @@
     "bitrate_label": "💾 Бітрейт:",
     "upscale_factor_label": "💾 Фактор масштабування:",
     "transitions_settings": "Переходи",
+    "transition_effect_label": "💾 Ефект переходу:",
+    "transition_random": "Випадковий",
+    "trans_desc_random": "Випадково обирає різні переходи для кожного кліпу.",
+    "trans_desc_fade": "Плавне перехресне згасання між кліпами.",
+    "trans_desc_wipeleft": "Лінійне стирання справа наліво.",
+    "trans_desc_wiperight": "Лінійне стирання зліва направо.",
+    "trans_desc_wipeup": "Лінійне стирання знизу вгору.",
+    "trans_desc_wipedown": "Лінійне стирання зверху вниз.",
+    "trans_desc_slideleft": "Новий кадр виїжджає справа.",
+    "trans_desc_slideright": "Новий кадр виїжджає зліва.",
+    "trans_desc_slideup": "Новий кадр виїжджає знизу.",
+    "trans_desc_slidedown": "Новий кадр виїжджає зверху.",
+    "trans_desc_circlecrop": "Коло розширюється, відкриваючи новий кадр.",
+    "trans_desc_rectcrop": "Прямокутник розширюється, відкриваючи новий кадр.",
+    "trans_desc_distance": "Старий кадр віддаляється, новий наближається.",
+    "trans_desc_fadeblack": "Затемнення в чорний, потім поява нового кадру.",
+    "trans_desc_fadewhite": "Засвічення в білий, потім поява нового кадру.",
+    "trans_desc_radial": "Радіальне стирання за годинниковою стрілкою.",
+    "trans_desc_smoothleft": "Плавне ковзання вліво.",
+    "trans_desc_smoothright": "Плавне ковзання вправо.",
+    "trans_desc_smoothup": "Плавне ковзання вгору.",
+    "trans_desc_smoothdown": "Плавне ковзання вниз.",
+    "trans_desc_circleopen": "Коло відкривається з центру.",
+    "trans_desc_circleclose": "Коло закривається до центру.",
+    "trans_desc_vertopen": "Відкривається вертикально з центру.",
+    "trans_desc_vertclose": "Закривається вертикально до центру.",
+    "trans_desc_horzopen": "Відкривається горизонтально з центру.",
+    "trans_desc_horzclose": "Закривається горизонтально до центру.",
+    "trans_desc_dissolve": "Розчинення одного кадру в іншому.",
+    "trans_desc_pixelize": "Пікселізація при переході.",
+    "trans_desc_diagtl": "Діагональне стирання з верхнього лівого кута.",
+    "trans_desc_diagtr": "Діагональне стирання з верхнього правого кута.",
+    "trans_desc_diagbl": "Діагональне стирання з нижнього лівого кута.",
+    "trans_desc_diagbr": "Діагональне стирання з нижнього правого кута.",
+    "trans_desc_hlslice": "Горизонтальні смуги вліво.",
+    "trans_desc_hrslice": "Горизонтальні смуги вправо.",
+    "trans_desc_vu": "Вертикальне стирання вгору.",
     "enable_transitions_label": "💾 Увімкнути переходи",
     "duration_label": "💾 Тривалість:",
     "zoom_effects": "Ефекти масштабування",
