--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -192,6 +192,43 @@
     "bitrate_label": "💾 Битрейт:",
     "upscale_factor_label": "💾 Фактор масштабирования:",
     "transitions_settings": "Переходы",
+    "transition_effect_label": "💾 Эффект перехода:",
+    "transition_random": "Случайный",
+    "trans_desc_random": "Случайно выбирает разные переходы для каждого клипа.",
+    "trans_desc_fade": "Плавное перекрестное затухание между клипами.",
+    "trans_desc_wipeleft": "Линейное стирание справа налево.",
+    "trans_desc_wiperight": "Линейное стирание слева направо.",
+    "trans_desc_wipeup": "Линейное стирание снизу вверх.",
+    "trans_desc_wipedown": "Линейное стирание сверху вниз.",
+    "trans_desc_slideleft": "Новый кадр выезжает справа.",
+    "trans_desc_slideright": "Новый кадр выезжает слева.",
+    "trans_desc_slideup": "Новый кадр выезжает снизу.",
+    "trans_desc_slidedown": "Новый кадр выезжает сверху.",
+    "trans_desc_circlecrop": "Круг расширяется, открывая новый кадр.",
+    "trans_desc_rectcrop": "Прямоугольник расширяется, открывая новый кадр.",
+    "trans_desc_distance": "Старый кадр отдаляется, новый приближается.",
+    "trans_desc_fadeblack": "Затемнение в черный, затем появление нового кадра.",
+    "trans_desc_fadewhite": "Засветка в белый, затем появление нового кадра.",
+    "trans_desc_radial": "Радиальное стирание по часовой стрелке.",
+    "trans_desc_smoothleft": "Плавное скольжение влево.",
+    "trans_desc_smoothright": "Плавное скольжение вправо.",
+    "trans_desc_smoothup": "Плавное скольжение вверх.",
+    "trans_desc_smoothdown": "Плавное скольжение вниз.",
+    "trans_desc_circleopen": "Круг открывается из центра.",
+    "trans_desc_circleclose": "Круг закрывается к центру.",
+    "trans_desc_vertopen": "Открывается вертикально из центра.",
+    "trans_desc_vertclose": "Закрывается вертикально к центру.",
+    "trans_desc_horzopen": "Открывается горизонтально из центра.",
+    "trans_desc_horzclose": "Закрывается горизонтально к центру.",
+    "trans_desc_dissolve": "Растворение одного кадра в другом.",
+    "trans_desc_pixelize": "Пикселизация при переходе.",
+    "trans_desc_diagtl": "Диагональное стирание из верхнего левого угла.",
+    "trans_desc_diagtr": "Диагональное стирание из верхнего правого угла.",
+    "trans_desc_diagbl": "Диагональное стирание из нижнего левого угла.",
+    "trans_desc_diagbr": "Диагональное стирание из нижнего правого угла.",
+    "trans_desc_hlslice": "Горизонтальные полосы влево.",
+    "trans_desc_hrslice": "Горизонтальные полосы вправо.",
+    "trans_desc_vu": "Вертикальное стирание вверх.",
     "enable_transitions_label": "💾 Включить переходы",
     "duration_label": "💾 Длительность:",
     "zoom_effects": "Эффекты масштабирования",
