--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -456,5 +456,8 @@
     "template_changes_new_value_column": "New Value",
     "template_changes_confirm": "Confirm",
     "template_changes_cancel": "Cancel",
-    "template_changes_no_changes": "No changes detected."
+    "template_changes_no_changes": "No changes detected.",
+    "quick_settings_title": "Quick Settings",
+    "quick_settings_footer": "Quickly access frequently used settings without switching tabs.",
+    "quick_settings_close_hint": "To close, drag the slider to the right."
 }
