--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -164,7 +164,7 @@
     "thumbnail_regen_button": "Перегенерувати",
     "thumbnail_delete_button": "Видалити",
     "load_demo_button": "Завантажити демо",
-    "api_key_label": "Ключ API:",
+    "api_key_label": "💾 Ключ API:",
     "check_balance_button": "Перевірити баланс",
     "checking_status": "Перевірка...",
     "connection_successful": "З'єднання успішне!",
