--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -157,6 +157,8 @@
     "gallery_total_media_label": "Total media: {count}",
     "gallery_task_group_title": "{title} ({count} images)",
     "gallery_language_group_title": "{title} ({count} images)",
+    "gallery_preview_group": "Previews ({count})",
+    "gallery_main_media_group": "Video Media ({count})",
     "confirm_image_deletion_message": "Are you sure you want to permanently delete this image from your disk?\n\n{}",
     "regenerate_image_title": "Regenerate Image",
     "thumbnail_regen_button": "Regenerate",
@@ -460,5 +462,13 @@
     "quick_settings_title": "Quick Settings",
     "quick_settings_footer": "Quickly access frequently used settings without switching tabs.",
     "quick_settings_close_hint": "To close, drag the slider to the right.",
-    "special_proc_mode_video_at_the_beginning": "Video at the beginning"
+    "special_proc_mode_video_at_the_beginning": "Video at the beginning",
+    "history_tab_title": "History",
+    "clear_history_button": "Clear History",
+    "history_text_preview_title": "Text Preview",
+    "view_texts": "View Texts",
+    "no_history_yet": "No history yet",
+    "clear_history_title": "Clear History?",
+    "clear_history_confirm": "Are you sure you want to delete all history?",
+    "click_to_view": "Click to view"
 }
