--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -100,6 +100,7 @@
     "browse_button": "Browse...",
     "select_directory": "Select Folder",
     "image_review_label": "💾 Image Review:",
+    "simultaneous_montage_label": "💾 Simultaneous Montage & Subtitles:",
     "detailed_logging_label": "Detailed logging:",
     "queue_tab": "Queue",
     "add_to_queue": "Add to Queue",
