--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -101,6 +101,7 @@
     "browse_button": "Обзор...",
     "select_directory": "Выберите папку",
     "image_review_label": "💾 Контроль изображений:",
+    "simultaneous_montage_label": "💾 Одновременный монтаж и субтитры:",
     "detailed_logging_label": "Детальное логирование:",
     "queue_tab": "Очередь",
     "add_to_queue": "Добавить в очередь",
