--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -101,6 +101,7 @@
     "browse_button": "Огляд...",
     "select_directory": "Виберіть папку",
     "image_review_label": "💾 Контроль зображень:",
+    "simultaneous_montage_label": "💾 Одночасний монтаж та субтитри:",
     "detailed_logging_label": "Детальне логування:",
     "queue_tab": "Черга",
     "add_to_queue": "Додати до черги",
