--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -463,7 +463,6 @@
     "quick_settings_title": "Быстрые настройки",
     "quick_settings_footer": "Быстрый доступ к часто используемым настройкам без переключения вкладок.",
     "quick_settings_close_hint": "Чтобы закрыть, перетащите разделитель вправо.",
-    "special_proc_mode_video_at_the_beginning": "Видео в начале",
     "history_tab_title": "История",
     "clear_history_button": "Очистить историю",
     "history_text_preview_title": "Просмотр текста",
@@ -473,5 +472,7 @@
     "clear_history_confirm": "Вы уверены, что хотите удалить всю историю?",
     "click_to_view": "Кликните для просмотра",
     "aspect_ratio_landscape": "Альбомная (16:9)",
-    "aspect_ratio_portrait": "Портретная (9:16)"
+    "aspect_ratio_portrait": "Портретная (9:16)",
+    "initial_video_label": "💾 Начальное видео:",
+    "select_initial_video_file": "Выберите начальное видео"
 }
