--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -470,7 +470,6 @@
     "quick_settings_title": "Швидкі налаштування",
     "quick_settings_footer": "Швидкий доступ до часто використовуваних налаштувань без перемикання вкладок.",
     "quick_settings_close_hint": "Щоб закрити, перетягніть роздільник вправо.",
-    "special_proc_mode_video_at_the_beginning": "Відео на початку",
     "history_tab_title": "Історія",
     "clear_history_button": "Очистити історію",
     "history_text_preview_title": "Перегляд тексту",
@@ -480,5 +479,7 @@
     "clear_history_confirm": "Ви впевнені, що хочете видалити всю історію?",
     "click_to_view": "Клікніть для перегляду",
     "aspect_ratio_landscape": "Альбомна (16:9)",
-    "aspect_ratio_portrait": "Портретна (9:16)"
+    "aspect_ratio_portrait": "Портретна (9:16)",
+    "initial_video_label": "💾 Початкове відео:",
+    "select_initial_video_file": "Виберіть початкове відео"
 }
