--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -53,6 +53,7 @@
     "connection_status_error": "Status: Error",
     "connection_status_not_configured": "Status: Not configured",
     "balance_label": "Balance:",
+    "openrouter_balance_label": "OpenRouter:",
     "balance_loading": "Balance: Loading...",
     "balance": "Balance",
     "balance_error": "Balance: Error",
@@ -444,7 +445,7 @@
     "image_height_label": "💾 Height:",
     "voicemaker_api_key_label": "💾 VoiceMaker API Key:",
     "rewrite_temperature_label": "💾 Temperature:",
-    "elevenlabs_image_api_key": "💾 ElevenLabsImage API Key:",
+    "elevenlabs_image_api_key": "💾 API Key:",
     "translation_review_label": "💾 Translation Review:",
     "rewrite_review_label": "💾 Rewrite Review:",
     "elevenlabs_unlim_api_key": "💾 ElevenLabs Unlimited API Key:",
