--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -53,6 +53,7 @@
     "connection_status_error": "Статус: Ошибка",
     "connection_status_not_configured": "Статус: Не настроено",
     "balance_label": "Баланс:",
+    "openrouter_balance_label": "OpenRouter:",
     "balance_loading": "Баланс: Загрузка...",
     "balance": "Баланс",
     "balance_error": "Баланс: Ошибка",
@@ -444,7 +445,7 @@
     "image_height_label": "Высота:",
     "voicemaker_api_key_label": "Ключ API VoiceMaker:",
     "rewrite_temperature_label": "Температура:",
-    "elevenlabs_image_api_key": "💾 Ключ API ElevenLabsImage:",
+    "elevenlabs_image_api_key": "💾 Ключ API:",
     "translation_review_label": "💾 Контроль перевода:",
     "rewrite_review_label": "💾 Контроль рерайта:",
     "elevenlabs_unlim_api_key": "💾 Ключ API ElevenLabsUnlimited:",
