--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -53,6 +53,7 @@
     "connection_status_error": "Статус: Помилка",
     "connection_status_not_configured": "Статус: Не налаштовано",
     "balance_label": "Баланс: ",
+    "openrouter_balance_label": "OpenRouter:",
     "balance_loading": "Баланс: Завантаження...",
     "balance": "Баланс",
     "balance_error": "Баланс: Помилка",
@@ -450,7 +451,7 @@
     "image_height_label": "💾 Висота:",
     "voicemaker_api_key_label": "💾 Ключ API VoiceMaker:",
     "rewrite_temperature_label": "💾 Температура:",
-    "elevenlabs_image_api_key": "💾 Ключ API ElevenLabsImage:",
+    "elevenlabs_image_api_key": "💾 Ключ API:",
     "aspect_ratio": "💾 Співвідношення сторін:",
     "translation_review_label": "💾 Контроль перекладу:",
     "rewrite_review_label": "💾 Контроль рерайту:",
