--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -475,5 +475,11 @@
     "aspect_ratio_landscape": "Альбомная (16:9)",
     "aspect_ratio_portrait": "Портретная (9:16)",
     "initial_video_label": "💾 Начальное видео:",
-    "select_initial_video_file": "Выберите начальное видео"
+    "select_initial_video_file": "Выберите начальное видео",
+    "recent_tasks_title": "Недавние задачи",
+    "no_recent_tasks": "За последние 2 дня задач нет",
+    "type_text": "Текст",
+    "type_rewrite": "Рерайт",
+    "select_template": "Выбрать шаблон",
+    "languages_label": "Языки"
 }
