--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -482,5 +482,11 @@
     "aspect_ratio_landscape": "Альбомна (16:9)",
     "aspect_ratio_portrait": "Портретна (9:16)",
     "initial_video_label": "💾 Початкове відео:",
-    "select_initial_video_file": "Виберіть початкове відео"
+    "select_initial_video_file": "Виберіть початкове відео",
+    "recent_tasks_title": "Нещодавні завдання",
+    "no_recent_tasks": "За останні 2 дні завдань немає",
+    "type_text": "Текст",
+    "type_rewrite": "Рерайт",
+    "select_template": "Обрати шаблон",
+    "languages_label": "Мови"
 }
