--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -108,6 +108,8 @@
     "add_to_queue": "Додати до черги",
     "enter_task_name_title": "Введіть назву завдання",
     "enter_task_name_label": "Назва завдання:",
+    "enter_source_lang_label": "Введіть код мови оригіналу (наприклад: en, uk):",
+    "tasks_added_success": "Завдання успішно додано до черги.",
     "default_task_name": "Завдання",
     "task_header": "Завдання та етапи",
     "expand_jobs": "Розгорнути завдання",
