--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -487,7 +487,7 @@
     "select_initial_video_file": "Виберіть початкове відео",
     "recent_tasks_title": "Нещодавні завдання",
     "no_recent_tasks": "За останні 2 дні завдань немає",
-    "type_text": "Текст",
+    "type_text": "Переклад",
     "type_rewrite": "Рерайт",
     "select_template": "Обрати шаблон",
     "languages_label": "Мови",
