--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -1,4 +1,5 @@
 {
+    "maximum_tokens": "Maximum",
     "help_title": "Information",
     "notification_tab": "Notifications",
     "enable_notifications_label": "Enable notifications",
