--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -1,4 +1,5 @@
 {
+    "maximum_tokens": "Максимум",
     "help_title": "Информация",
     "notification_tab": "Уведомления",
     "enable_notifications_label": "Включить уведомления",
