--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -1,4 +1,5 @@
 {
+    "maximum_tokens": "Максимум",
     "help_title": "Інформація",
     "notification_tab": "Сповіщення",
     "enable_notifications_label": "Увімкнути сповіщення",
