--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -110,7 +110,7 @@
     "add_to_queue": "Add to Queue",
     "enter_task_name_title": "Enter task name",
     "enter_task_name_label": "Task name:",
-    "enter_source_lang_label": "Enter source language code (e.g. en, uk):",
+    "enter_source_lang_label": "Enter the language code of the video (e.g. en, uk) you are rewriting.\nThis engine cannot automatically detect the language for transcription:",
     "tasks_added_success": "Task(s) successfully added to queue.",
     "default_task_name": "Task",
     "task_header": "Tasks and Stages",
