--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -111,7 +111,7 @@
     "add_to_queue": "Додати до черги",
     "enter_task_name_title": "Введіть назву завдання",
     "enter_task_name_label": "Назва завдання:",
-    "enter_source_lang_label": "Введіть код мови оригіналу (наприклад: en, uk):",
+    "enter_source_lang_label": "Вкажіть код мови відео (напр. uk, en), яке ви рерайтєте.\nЦей рушій не вміє автоматично визначати мову для транскрипції:",
     "tasks_added_success": "Завдання успішно додано до черги.",
     "default_task_name": "Завдання",
     "task_header": "Завдання та етапи",
