--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -113,6 +113,11 @@
     "enter_source_lang_label": "Enter the language code of the video (e.g. en, uk) you are rewriting.\nThis engine cannot automatically detect the language for transcription:",
     "amd_models_missing_title": "Models Not Found",
     "amd_models_missing_message": "No Whisper models (.bin) found in the 'whisper-cli-amd' folder.<br><br>Please download models from this link:<br><a href='https://drive.google.com/drive/folders/1ApNU-aZnBN31AHaZicyfUIF34CSidAoS'>Google Drive (Click Here)</a><br><br>And place them in the whisper-cli-amd folder.",
+    "download_model_button": "Download",
+    "model_already_exists": "Model already downloaded",
+    "downloading_model_title": "Downloading Model",
+    "download_success": "Model {model} successfully downloaded!",
+    "download_error": "Download error: {error}",
     "tasks_added_success": "Task(s) successfully added to queue.",
     "default_task_name": "Task",
     "task_header": "Tasks and Stages",
