--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -114,6 +114,11 @@
     "enter_source_lang_label": "Укажите код языка видео (напр. uk, en), которое вы рерайтите.\nЭтот движок не умеет автоматически определять язык для транскрипции:",
     "amd_models_missing_title": "Модели не найдены",
     "amd_models_missing_message": "В папке 'whisper-cli-amd' не найдено ни одной модели (.bin).<br><br>Загрузите необходимые модели по ссылке:<br><a href='https://drive.google.com/drive/folders/1ApNU-aZnBN31AHaZicyfUIF34CSidAoS'>Google Диск (Нажми сюда)</a><br><br>Положите их в папку whisper-cli-amd.",
+    "download_model_button": "Скачать",
+    "model_already_exists": "Модель уже скачана",
+    "downloading_model_title": "Загрузка модели",
+    "download_success": "Модель {model} успешно скачана!",
+    "download_error": "Ошибка загрузки: {error}",
     "tasks_added_success": "Задачи успешно добавлены в очередь.",
     "default_task_name": "Задача",
     "task_header": "Задачи и этапы",
