--- a/assets/translations/uk.json
+++ b/assets/translations/uk.json
@@ -113,8 +113,12 @@
     "enter_task_name_label": "Назва завдання:",
     "enter_source_lang_label": "Вкажіть код мови відео (напр. uk, en), яке ви рерайтєте.\nЦей рушій не вміє автоматично визначати мову для транскрипції:",
     "amd_models_missing_title": "Моделі не знайдено",
-    "amd_models_missing_message": "В папці 'whisper-cli-amd' не знайдено жодної моделі (.bin).<br><br>Завантажте необхідні моделі за посиланням:<br><a href='https://drive.google.com/drive/folders/1ApNU-aZnBN31AHaZicyfUIF34CSidAoS'>Google Диск (Тисни сюди)</a><br><br>Покладіть їх у папку whisper-cli-amd.",
-    "tasks_added_success": "Завдання успішно додано до черги.",
+    "amd_models_missing_message": "В папці 'whisper-cli-amd' не знайдено жодної моделі (.bin).<br><br>Завантажте необхідні моделі за посиланням:<br><a href='https://drive.google.com/drive/folders/1ApNU-aZnBN31AHaZicyfUIF34CSidAoS'>Google Диск (Тисни сюди)</a><br><br>Положите их в папку whisper-cli-amd.",
+    "download_model_button": "Завантажити",
+    "model_already_exists": "Модель вже завантажена",
+    "downloading_model_title": "Завантаження моделі",
+    "download_success": "Модель {model} успішно завантажена!",
+    "download_error": "Помилка завантаження: {error}",
     "default_task_name": "Завдання",
     "task_header": "Завдання та етапи",
     "expand_jobs": "Розгорнути завдання",
